# wasm-demo

./: .gitignore  CMakeLists.txt  README.md  add.js  add.wasm  add.wasm.map  index.html  main.cpp  run-wasm.sh  run.sh
.github/workflows/: native-ubuntu.yml  wasm-emscripten.yml
include/: compressor.h
include/shared/: compressor.h
source/: CMakeLists.txt  compressor.cpp  main.cpp
source/native/: CMakeLists.txt  main.cpp
source/native/tests/: compression_tests.cpp
source/shared/: CMakeLists.txt  compressor.cpp
source/tests/: compression_tests.cpp
source/wasm/: CMakeLists.txt  main.cpp
source/wasm-browser/: compress.js  index.html  package-lock.json  package.json  style.css
source/wasm-browser/test/: wasm-demo.js
